--- a/src/main/resources/templates/sign-in.html
+++ b/src/main/resources/templates/sign-in.html
@@ -31,32 +31,36 @@
         <form action="#"
               class="d-flex flex-column"
               method="post"
-              th:method="@{account/login}"
-              th:object="${userLoginData}">
-            <div class="form-group">
-                <label for="username">Username:</label>
+              novalidate
+              th:method="@{/account/login}"
+              th:object="${userSignInData}">
+            <label for="username" class="form-label">Username:</label>
+            <div class="input-group">
+                <span class="input-group-text border-black" id="inputGroupPrepend">@</span>
                 <input
-                        th:field="*{username}"
-                        type="text"
+                        aria-describedby="inputGroupPrepend"
                         class="form-control border border-black fs-6"
                         id="username"
                         placeholder="Enter username"
                         required
+                        th:field="*{username}"
+                        type="text"
                 />
-                <div
-                        th:if="${#fields.hasErrors('username')}"
-                        th:errors="*{username}"
-                        class="text-danger fs-6"></div>
             </div>
-            <div class="form-group">
-                <label for="password">Password:</label>
+            <div
+                    th:if="${#fields.hasErrors('username')}"
+                    th:errors="*{username}"
+                    class="text-danger fs-6"></div>
+            <label for="password" class="form-label">Password:</label>
+            <div class="input-group">
                 <input
-                        th:field="*{password}"
-                        type="password"
                         class="form-control border border-black mb-3 fs-6"
                         id="password"
+                        name="password"
                         placeholder="Enter password"
                         required
+                        th:field="*{password}"
+                        type="password"
                 />
             </div>
             <button
