--- a/src/main/resources/templates/test-create.html
+++ b/src/main/resources/templates/test-create.html
@@ -6,98 +6,119 @@
     <div th:replace="fragments/headers :: header"></div>
 
     <main class="d-flex align-items-center flex-grow-1">
-        <div
-                class="container bg-secondary border border-2 border-black rounded shadow text-white fs-4 p-3"
-        >
-            <h1 class="text-center">Create Test</h1>
-            <div class="row row-cols-1 row-cols-md-2 mb-2">
-                <div class="col">
-                    <label for="name" class="form-label">Test name:</label>
+        <div class="container bg-secondary border border-2 border-black rounded shadow text-white fs-4 p-3">
+            <form
+                    action="#"
+                    class="needs-validation"
+                    method="post"
+                    novalidate
+                    th:action="@{/test/create}"
+                    th:object="${testCreateDTO}">
+                <h1 class="text-center">Create Test</h1>
+                <div class="row row-cols-1 row-cols-md-2 mb-2">
+                    <div class="col">
+                        <label for="name" class="form-label">Test name:</label>
+                    </div>
+                    <div class="col">
+                        <div class="input-group has-validation">
+                            <input
+                                    class="form-control border border-black shadow fs-5"
+                                    id="name"
+                                    name="name"
+                                    type="text"
+                            />
+                        </div>
+                    </div>
                 </div>
-                <div class="col">
-                    <input
-                            type="text"
-                            class="form-control border border-black shadow fs-5"
-                            id="name"
-                    />
+                <div class="row row-cols-1 row-cols-md-2 mb-2">
+                    <div class="col">
+                        <label for="description" class="form-label">Description:</label>
+                    </div>
+                    <div class="col">
+                        <div class="input-group has-validation">
+
+                        </div>
+                        <input
+                                type="text"
+                                class="form-control border border-black fs-5"
+                                id="description"
+                                placeholder="(optional)"
+                        />
+                    </div>
                 </div>
-            </div>
-            <div class="row row-cols-1 row-cols-md-2 mb-2">
-                <div class="col">
-                    <label for="description" class="form-label">Description:</label>
+                <div class="row row-cols-1 row-cols-md-2 mb-2">
+                    <div class="col">
+                        <label for="code" class="form-label">Code:</label>
+                    </div>
+                    <div class="col">
+                        <div class="input-group has-validation">
+
+                        </div>
+                        <input
+                                type="text"
+                                class="form-control border border-black fs-5"
+                                id="code"
+                        />
+                    </div>
                 </div>
-                <div class="col">
-                    <input
-                            type="text"
-                            class="form-control border border-black fs-5"
-                            id="description"
-                            placeholder="(optional)"
-                    />
+                <div class="row row-cols-1 row-cols-md-2 mb-2">
+                    <div class="col">
+                        <label for="time-for-response" class="form-label"
+                        >Time for response:</label>
+                    </div>
+                    <div class="col">
+                        <div class="input-group has-validation">
+
+                        </div>
+                        <input
+                                type="text"
+                                class="form-control border border-black fs-5"
+                                id="time-for-response"
+                                placeholder="(in minutes)"
+                        />
+                    </div>
                 </div>
-            </div>
-            <div class="row row-cols-1 row-cols-md-2 mb-2">
-                <div class="col">
-                    <label for="code" class="form-label">Code:</label>
+                <div class="row row-cols-1 row-cols-md-2 mb-2">
+                    <div class="col">
+                        <label for="questions-count" class="form-label"
+                        >Questions count:</label>
+                    </div>
+                    <div class="col">
+                        <div class="input-group has-validation">
+
+                        </div>
+                        <input
+                                type="text"
+                                class="form-control border border-black fs-5"
+                                id="questions-count"
+                        />
+                    </div>
                 </div>
-                <div class="col">
-                    <input
-                            type="text"
-                            class="form-control border border-black fs-5"
-                            id="code"
-                    />
+                <div class="row row-cols-1 row-cols-md-2 mb-2">
+                    <div class="col">
+                        <label for="status" class="form-label">Status:</label>
+                    </div>
+                    <div class="col">
+                        <div class="input-group has-validation">
+
+                        </div>
+                        <input
+                                type="text"
+                                class="form-control border border-black fs-5"
+                                id="status"
+                                placeholder="(opened/closed)"
+                        />
+                    </div>
                 </div>
-            </div>
-            <div class="row row-cols-1 row-cols-md-2 mb-2">
-                <div class="col">
-                    <label for="time-for-response" class="form-label"
-                    >Time for response:</label
-                    >
+                <div class="row">
+                    <div class="col text-center">
+                        <button type="submit"
+                                class="btn bg-light text-black border border-black border-2 shadow rounded fs-5 px-5 mt-3">
+                            next
+                        </button>
+                    </div>
                 </div>
-                <div class="col">
-                    <input
-                            type="text"
-                            class="form-control border border-black fs-5"
-                            id="time-for-response"
-                            placeholder="(in minutes)"
-                    />
-                </div>
-            </div>
-            <div class="row row-cols-1 row-cols-md-2 mb-2">
-                <div class="col">
-                    <label for="questions-count" class="form-label"
-                    >Questions count:</label
-                    >
-                </div>
-                <div class="col">
-                    <input
-                            type="text"
-                            class="form-control border border-black fs-5"
-                            id="questions-count"
-                    />
-                </div>
-            </div>
-            <div class="row row-cols-1 row-cols-md-2 mb-2">
-                <div class="col">
-                    <label for="status" class="form-label">Status:</label>
-                </div>
-                <div class="col">
-                    <input
-                            type="text"
-                            class="form-control border border-black fs-5"
-                            id="status"
-                            placeholder="(opened/closed)"
-                    />
-                </div>
-            </div>
-            <div class="row">
-                <div class="col text-center">
-                    <button
-                            class="btn bg-light text-black border border-black border-2 shadow rounded fs-5 px-5 mt-3"
-                    >
-                        next
-                    </button>
-                </div>
-            </div>
+            </form>
         </div>
     </main>
 
