you can't hit all endpoint, until you log your accout; test-create.html refactored - needs more

--- a/src/main/resources/templates/fragments/headers.html
+++ b/src/main/resources/templates/fragments/headers.html
@@ -47,12 +47,12 @@
                     <a
                             class="nav-link text-center fs-5 link-light active"
                             aria-current="page"
-                            href="#"
+                            href="/test/join"
                     >Join Test</a
                     >
                     <a
                             class="nav-link text-center fs-5 link-light"
-                            href="#"
+                            href="/test/create"
                     >Create Test</a
                     >
                     <a class="nav-link text-center fs-5 link-light" href="#"
