--- a/src/main/resources/templates/test-create.html
+++ b/src/main/resources/templates/test-create.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <div th:replace="fragments/heads :: head"></div>
 <body class="font">
 <div class="d-flex flex-column vh-100 gap-5">
@@ -26,6 +26,7 @@
                                     id="name"
                                     name="name"
                                     type="text"
+                                    th:field="*{name}"
                             />
                         </div>
                     </div>
@@ -36,14 +37,15 @@
                     </div>
                     <div class="col">
                         <div class="input-group has-validation">
-
+                            <input
+                                    type="text"
+                                    class="form-control border border-black fs-5"
+                                    id="description"
+                                    name="description"
+                                    placeholder="(optional)"
+                                    th:field="*{description}"
+                            />
                         </div>
-                        <input
-                                type="text"
-                                class="form-control border border-black fs-5"
-                                id="description"
-                                placeholder="(optional)"
-                        />
                     </div>
                 </div>
                 <div class="row row-cols-1 row-cols-md-2 mb-2">
@@ -52,46 +54,49 @@
                     </div>
                     <div class="col">
                         <div class="input-group has-validation">
-
+                            <input
+                                    type="text"
+                                    class="form-control border border-black fs-5"
+                                    id="code"
+                                    name="code"
+                                    th:field="*{code}"
+                            />
                         </div>
-                        <input
-                                type="text"
-                                class="form-control border border-black fs-5"
-                                id="code"
-                        />
                     </div>
                 </div>
                 <div class="row row-cols-1 row-cols-md-2 mb-2">
                     <div class="col">
-                        <label for="time-for-response" class="form-label"
+                        <label for="responseTime" class="form-label"
                         >Time for response:</label>
                     </div>
                     <div class="col">
                         <div class="input-group has-validation">
-
+                            <input
+                                    type="text"
+                                    class="form-control border border-black fs-5"
+                                    id="responseTime"
+                                    name="responseTime"
+                                    placeholder="(in minutes)"
+                                    th:field="*{responseTime}"
+                            />
                         </div>
-                        <input
-                                type="text"
-                                class="form-control border border-black fs-5"
-                                id="time-for-response"
-                                placeholder="(in minutes)"
-                        />
                     </div>
                 </div>
                 <div class="row row-cols-1 row-cols-md-2 mb-2">
                     <div class="col">
-                        <label for="questions-count" class="form-label"
+                        <label for="questionsCount" class="form-label"
                         >Questions count:</label>
                     </div>
                     <div class="col">
                         <div class="input-group has-validation">
-
+                            <input
+                                    type="text"
+                                    class="form-control border border-black fs-5"
+                                    id="questionsCount"
+                                    name="questionsCount"
+                                    th:field="*{questionsCount}"
+                            />
                         </div>
-                        <input
-                                type="text"
-                                class="form-control border border-black fs-5"
-                                id="questions-count"
-                        />
                     </div>
                 </div>
                 <div class="row row-cols-1 row-cols-md-2 mb-2">
@@ -100,14 +105,15 @@
                     </div>
                     <div class="col">
                         <div class="input-group has-validation">
-
+                            <input
+                                    type="text"
+                                    class="form-control border border-black fs-5"
+                                    id="status"
+                                    name="status"
+                                    placeholder="(opened/closed)"
+                                    th:field="*{status}"
+                            />
                         </div>
-                        <input
-                                type="text"
-                                class="form-control border border-black fs-5"
-                                id="status"
-                                placeholder="(opened/closed)"
-                        />
                     </div>
                 </div>
                 <div class="row">
